--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "clipboard-copy": "^3.2.0",
+    "eruda": "^2.4.1",
     "firebase": "^8.6.3",
     "gsap": "^3.6.1",
     "onesignal": "^0.1.2",
