--- a/public/manifest.json
+++ b/public/manifest.json
@@ -41,6 +41,6 @@
   ,"start_url": ".",
    "theme_color": "#F05E23",
    "background_color": "#ffffff",
-   "display": "fullscreen",
+   "display": "standalone",
     "orientation": "portrait"
  }
